Removed service & service implementation where it was enough with just hte repository interface.
Fixed a bug:

signout endpoint was missing a "getPrincipal()" and causing a class cast exception.